# rust-downloader

./: .dockerignore  .env  .gitignore  Cargo.toml  DISCLAIMER.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FONCTIONNALITES_MANQUANTES.md  LICENSE  LINKEDIN_POST.md  README.md  README_WEB.md  docker-compose.yml  rmd  start-dev.sh  tauri.conf.json
.github/: release-drafter.yml
.github/workflows/: deploy-docs.yml  release.yml  rust-build.yml
.junie/: guidelines.md
backend/: .gitignore  Cargo.toml  downloads.db
backend/migrations/: 003_add_playlist_support.sql
backend/src/: cache.rs  converter.rs  db.rs  main.rs  models.rs  openapi.rs  state.rs  validation.rs
backend/src/api/: config.rs  download.rs  files.rs  logs.rs  mod.rs  statistics.rs  tags.rs  video.rs  webhooks.rs
cli/: Cargo.toml
cli/src/: downloader.rs  main.rs  progress.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: BulkActionBar.css  BulkActionBar.jsx  ConvertModal.css  ConvertModal.jsx  DisclaimerPage.css  DisclaimerPage.jsx  DownloadCard.css  DownloadCard.jsx  DownloadCardHover.css  DownloadCardHover.jsx  DownloadForm.css  DownloadForm.jsx  DownloadList.css  DownloadList.jsx  EditMetadataModal.css  EditMetadataModal.jsx  ErrorBoundary.jsx  LicensePage.css  LicensePage.jsx  MediaPlayer.css  MediaPlayer.jsx  OfflineQueueIndicator.css  OfflineQueueIndicator.jsx  PWAInstallPrompt.css  PWAInstallPrompt.jsx  Pagination.css  Pagination.jsx  StatisticsDashboard.css  StatisticsDashboard.jsx  TagManager.css  TagManager.jsx  ThemeSelector.css  ThemeSelector.jsx  Toast.css  Toast.jsx  VideoPreview.css  VideoPreview.jsx
frontend/src/contexts/: ToastContext.jsx
frontend/src/hooks/: useDownloads.js  useErrorState.js  useNotifications.js  useOfflineQueue.js  usePWA.js  useRateLimit.js  useToast.js
frontend/src/styles/: index.css
frontend/src/utils/: debounce.js  errorHandler.js  offlineQueue.js
rmd-core/: Cargo.toml
rmd-core/src/: installers.rs  lib.rs
shared/: Cargo.toml
shared/examples/: test_config.rs
shared/src/: config.rs  downloader.rs  installers.rs  lib.rs  video_info.rs
src/: commands.rs  config.rs  config_test.rs  cookies.rs  cookies_test.rs  downloader.rs  index.html  installers.rs  main.rs  progress.rs  settings.rs  spleeter.rs  user_input.rs  utils.rs
src-tauri/src/: commands_test.rs  main.rs  user_input.rs
