[package]
name = "rust-media-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Paterne G. G <paterne81@hotmail.fr>"]
description = "Rust Downloader - Téléchargeur de médias multiplateforme"
keywords = ["download", "cli", "media", "video", "tool"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
repository = "https://github.com/teamflp/rust-downloader"
readme = "README.md"

[[bin]]
name = "rust-media-downloader"
path = "src/main.rs"

[dependencies]
colored = "2.0"
dialoguer = "0.11.0"
log = "0.4"
env_logger = "0.11"
rmd-core = { path = "rmd-core" }

