[package]
name = "rust-media-downloader-backend"
version = "0.1.0"
edition = "2021"
authors = ["Paterne G. G <paterne81@hotmail.fr>"]
description = "Web backend for Rust Media Downloader"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower_governor = "0.4"
serde = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
url = "2.5"
regex = "1.11"
once_cell = "1.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rust-media-downloader-shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
