[package]
name = "rust-media-downloader-cli"
version = "0.1.0"
edition = "2021"
authors = ["Paterne G. G <paterne81@hotmail.fr>"]
description = "Rust Downloader - Téléchargeur de médias multiplateforme (CLI)"
keywords = ["download", "cli", "media", "video", "tool"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
repository = "https://github.com/teamflp/rust-downloader"
readme = "../README.md"

[[bin]]
name = "rmd"
path = "src/main.rs"

[dependencies]
rust-media-downloader-shared = { path = "../shared" }
indicatif = "0.17"
colored = "3.0.0"
dialoguer = "0.11.0"
console = "0.15.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
